# branchfs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
bench/: README.md  branchfs_bench.py  plot_results.py  quick_bench.sh
src/: branch.rs  daemon.rs  error.rs  fs.rs  fs_ctl.rs  fs_helpers.rs  inode.rs  lib.rs  main.rs
tests/: test_abort.sh  test_branch_create.sh  test_branch_dirs.sh  test_branch_validate.sh  test_commit.sh  test_file_operations.sh  test_helper.sh  test_unmount.sh
