[package]
name = "branchfs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "FUSE filesystem with atomic branching for speculative execution"
repository = "https://github.com/penberg/branchfs"
keywords = ["fuse", "filesystem", "branching", "copy-on-write"]
categories = ["filesystem"]

[dependencies]
fuser = "0.16"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.28", features = ["fs", "mount", "sched", "signal", "process", "user"] }
libc = "0.2"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
dashmap = "5"
anyhow = "1"
thiserror = "1"
